--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
   linkedin_username: 'www.linkedin.com/in/minhoi-park-b3445b251'
   scholar_username: 'https://scholar.google.com/citations?user=K05fCo4AAAAJ&hl=ko'
   github_username: 'minhoipark'
-  head_img: 'static/img/landing/picture.jpeg'
+  head_img: 'static/img/박민회증명사진.jpg'
   desc: "I am currently a master's student in the Department of Urban Big Data Convergence at the University of Seoul. Alongside my studies, I am working as a researcher at the Data Science Research Institute at Yonsei University."
   
 
