--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -1,97 +1,41 @@
 - name:
-    detail: Senior Data scientist @ Saint-Gobain.
-    i18n: re
+    detail: Resercher at Yonsei University, MLAI LAB
+    i18n: rsy
   desc:
-    detail: From March 2022 to present. Develop and industrialized AI solutions for different businesses of Saint-Gobain.
-    i18n: re_des
+    detail: From April 2024 to present, I'm working in
+    i18n: rsy_des
   date:
-    detail: April. 2022 - Present
-    i18n: re_date
+    detail: Apr. 2023 - Present
+    i18n: rsy_date
   job:
-    detail: Senior Data Scientist
-    i18n: re_job
+    detail: Researcher
+    i18n: rsy_job
   icon: fa-search
 
 - name:
-    detail: Data scientist & Project Manager @ Saint-Gobain Research Paris.
-    i18n: re
+    detail: Master
+    i18n: ms
   desc:
-    detail: From April 2018 to 2022. Developing AI solutions in context of R&D projects.
-    i18n: re_des
+    detail: From Mars 2023 to present, I am master's student in the Department of Urban Bif Data Convergence.
+    i18n: ms_des
   date:
-    detail: April. 2018 - March. 2022
-    i18n: re_date
+    detail: Mar. 2023 - Present
+    i18n: ms_date
   job:
-    detail: Research Engineer & Project Manager
-    i18n: re_job
+    detail: Master
+    i18n: ms_job
   icon: fa-search
 
 - name:
-    detail: Post-doc at UBFC, Le2i laboratory
-    i18n: postdoc
+    detail: Researcher at University of Seoul, MLAI LAB
+    i18n: rs
   desc:
-    detail: From March 2016 to March 2018, I was a post-doc in UBFC, Le2i laboratory, working on ANR VIPeR project.
-    i18n: postdoc_des
+    detail: From September 2021 to Febrary 2023, I was a researcher in University of Seoul, MLAI LAB.
+    i18n: rs_des
   date:
-    detail: March. 2016 - March. 2018
-    i18n: postdoc_date
+    detail: Sep. 2021 - Feb. 2023
+    i18n: rs_date
   job:
-    detail: Post-doc
-    i18n: potdoc_job
+    detail: Resercher
+    i18n: rs_job
   icon: fa-search
-
-- name:
-    detail: Joint PhD at UdG-UBFC
-    i18n: phd
-  desc:
-    detail: In June 2016, I graduated from a joint PhD from the Universitat de Girona and the Universite de Bourgogne France-Comte. My thesis was entitled "An approach to Melanoma Classification Exploiting Polarization Information".
-    i18n: phd_des
-  date:
-    detail: Aug. 2012 - Jun. 2016
-    i18n: phd_date
-  job:
-    detail: PhD candidate
-    i18n: phd_job
-  icon: fa-search
-
-- name:
-    detail: Barcelona Digital
-    i18n: bd
-  desc:
-    detail: From September 2011 to June 2012, I was researcher at Barcelona Digital focusing on classification and data mining tools for European project Brainable.
-    i18n: bd_des
-  date:
-    detail: Sep. 2011 - Jun. 2012
-    i18n: bd_date
-  job:
-    detail: Intern researcher
-    i18n: bd_job
-  icon: fa-search
-
-- name:
-    detail: Erasmus Mundus MSc in Vision and Robotics (Vibot) at HWU-UdG-UBFC
-    i18n: vibot
-  desc:
-    detail: In September 2011, I graduated from a Master in Vision and Robotics. My final thesis was entitled "Change Detection in Epiluminescent Microscopy for Early Detection of Skin Cancer".
-    i18n: vibot_des
-  date:
-    detail: Sep. 2009 - Sep. 2011
-    i18n: vibot_date
-  job:
-    detail: MSc student candidate
-    i18n: vibot_job
-  icon: fa-book
-
-- name:
-    detail: Bachelor of Electrical and Electronics Engineering, University Teknologi PETRONAS
-    i18n: EE, UTP
-  desc:
-    detail: In 2005 I obtained PETRONAS scholarship to study EE.Eng in UTP and four years after, in June 2009, I obtained my bachelor among Hounor class.
-    i18n: utp_des
-  date:
-    detail: Sep. 2005 - June. 2009
-    i18n: utp_date
-  job:
-    detail: Bsc student candidate
-    i18n: utp_job
-  icon: fa-book
