--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,41 +1,20 @@
-- name: Melanoma Cancer
-  percentage: 98
-
 - name: Python
-  percentage: 95
+  percentage: 75
 
-- name: Polarized Imaging
-  percentage: 90
-
-- name: Matlab
-  percentage: 95
-
-- name: Retinopathy
-  percentage: 85
-
-- name: C/C++
-  percentage: 60
-
-- name: Pattern Recognition
-  percentage: 90
+- name: SQL
+  percentage: 75
 
 - name: Git
-  percentage: 98
+  percentage: 50
 
 - name: Machine Learning
-  percentage: 98
+  percentage: 60
 
 - name: Data Mining
-  percentage: 98
-
-- name: Computer Vision
-  percentage: 90
+  percentage: 80
 
 - name: Linux/Unix
-  percentage: 95
-
-- name : ROS
-  percentage: 90
+  percentage: 80
 
 - name: Latex
-  percentage: 95
+  percentage: 60
