--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -1,5 +1,5 @@
 - name:
-    detail: Resercher @ Yonsei University
+    detail: Researcher @ Yonsei University
     i18n: rsy
   desc:
     detail: From April 2023 to present
