--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
 
 - name: 'Education Content Analysis and Relation Extraction'
   i18n: 'TIPS'
-  img: 'static/img/landing/dasan.png'
+  img: 'static/img/landing/TIPS.png'
   desc: 'Development of an Artificial Intelligence Model that Comprehensively Considers Multimodal Elements of Educational Content (Images, Text, Equations, etc.) and Inference of Their Relationships'
 
 - name: 'Education Contents Relationship Analysis with Multimodal Learning'
@@ -20,13 +20,16 @@
   
 - name: 'Financial and Telecommunication Data Analysis'
   i18n: 'police22'
+  img: 'static/img/landing/Police.png'
   desc: 'Development of algorithms for effective analysis and visualization of various structured data, and establishment of strategies for their application in actual police investigations and crime rate prediction'
 
 - name: 'Explainable Graph Neural Network and Molecular Structure'
   i18n: 'Graph'
+  img: 'static/img/landing/graphical_abs_DSWA.png'
   desc: 'Development of Explainable Graph Node Classification Algorithm'
 
 - name: 'Trustworthy AI Guidebook for Engineer'
   i18n: 'TTA'
+  img: 'static/img/landing/TTA.png'
   desc: 'Derivation of Verification Items and Methods for Trustworthy Artificial Intelligence'
   
