--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Website settings
 title: "Ms. Minhoi.Park"
 description: "Personal website of Minhoi Park"
-keywords: "mrastgoo,mojdeh,rastgoo,medical,imaging,vision,melanoma,polarized,multispectral"
+keywords: "minhoi park, robust machine learning, domain generalization, VLLM"
 baseurl: "/"
 url: "http://minhoipark.github.io"
 # url: "http://127.0.0.1:4000"
@@ -17,7 +17,7 @@ author:
   linkedin_username: 'www.linkedin.com/in/minhoi-park-b3445b251'
   scholar_username: 'https://scholar.google.com/citations?user=K05fCo4AAAAJ&hl=ko'
   github_username: 'minhoipark'
-  head_img: 'static/img/minhboi.jpg'
+  head_img: 'static/img/landing/minhboi.jpg'
   desc: "I am currently a master's student in the Department of Urban Big Data Convergence at the University of Seoul. Alongside my studies, I am working as a researcher at the Data Science Research Institute at Yonsei University."
   
 
@@ -35,11 +35,11 @@ sections:
     tpl: 'career.html'
     css: 'timeline'
 
-  - id: 'skills'
-    i18n: 'nav.skills'
-    name: 'Skills'
-    tpl: 'skills.html'
-    css: 'team'
+  #- id: 'skills'
+   # i18n: 'nav.skills'
+   # name: 'Skills'
+   # tpl: 'skills.html'
+   # css: 'team'
 
   - id: 'projects'
     i18n: 'nav.projects'
@@ -54,9 +54,9 @@ sections:
     css: 'publications'
 
 # localization
-languages:
-  - locale: 'en'
-    flag: 'static/img/flags/United-States.png'
+# languages:
+#  - locale: 'en'
+#    flag: 'static/img/flags/United-States.png'
   # - locale: 'zh'
   #   flag: 'static/img/flags/China.png'
 
@@ -64,9 +64,9 @@ languages:
 img_path: 'http://www.jack003.com/static/img/blog'
 
 # donate
-donate:
-  wechat: 'static/img/pay/wechat.png'
-  alipay: 'static/img/pay/alipay.png'
+# donate:
+#  wechat: 'static/img/pay/wechat.png'
+#  alipay: 'static/img/pay/alipay.png'
 
 # comment
 changyan:
