--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,18 @@
 # Website settings
 title: "Ms. Minhoi.Park"
 description: "Personal website of Minhoi Park"
-keywords: "minhoi park, robust machine learning, domain generalization, VLLM"
+keywords: "minhoi park, robust machine learning, domain generalization, Vision Large Language Model"
 baseurl: "/"
 url: "http://minhoipark.github.io"
 # url: "http://127.0.0.1:4000"
 
 # author
 author:
-  name: 'Minhoi'
+  name: 'Minhoi Park'
   first_name: 'Minhoi'
   last_name: 'Park'
   email: 'minhoi.park.stella@gmail.com'
-  linkedin_username: 'www.linkedin.com/in/minhoi-park-b3445b251/'
+  linkedin_username: 'https://www.linkedin.com/in/minhoi-park-b3445b251/'
   scholar_username: 'https://scholar.google.com/citations?user=K05fCo4AAAAJ&hl=ko'
   github_username: 'minhoipark'
   head_img: 'static/img/landing/minhoi.jpg'
