--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Welcome to Jekyll!
 
 # Website settings
-title: "Ms. Minhoi.Park"
+title: "Minhoi.Park"
 description: "Personal website of Minhoi Park"
 keywords: "minhoi park, robust machine learning, domain generalization, Vision Large Language Model"
 baseurl: "/"
